# Stanford-Junior-self-driving-car

./: .hgignore  .hgtags  README.md
.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
param/: cannyproctable.ini  kalmanproctable.ini  ladybug.conf  planner.ini  processes.ctrl  processes_nuthouse.ctrl  processes_oldpro.ctrl  processes_playback.ctrl  roadrunner.ini
param/classifiers/: vail_and_twothirds_quonset_classifier.mb
param/hsv-tables/: grn_hue_shape_table-2010-07-10.uint8  grn_hue_shape_table-2010-07-23.uint8  hue-tables-2010-07-23.fig  hue_tables-2010-07-10.fig  readme  red_hue_shape_table-2010-07-10.uint8  red_hue_shape_table-2010-07-23.uint8  saturation_shape_table-2010-07-10.uint8  saturation_shape_table-2010-07-23.uint8  ylw_hue_shape_table-2010-07-10.uint8  ylw_hue_shape_table-2010-07-23.uint8
param/rndfs/: Sample_MDF.txt  Sample_RNDF.txt  VAIL_internal_mdf.txt  VAIL_large_loop_kinky_rndf.txt  VAIL_large_loop_rndf.txt  (+6 more)
scripts/: log_run  monitor  playback  run
src/: Makefile  Makefile.rules  Makefile.statconf  Makefile.template  Makefile.toplevelrules  configure
src/ros-pkg/dst/: CMakeLists.txt  mainpage.dox  manifest.xml  record.launch  rosbag_cmd
src/ros-pkg/dst/include/dst/: bilateral_npg.h  canny_epg.h  color_delta_epg.h  color_histogram_npg.h  compute_nodes.h  depth_epg.h  depth_npg.h  depth_projector.h  edge_potential_aggregator.h  edge_potential_generator.h  edge_potentials.h  entry_point.h  helper_functions.h  image_processing_nodes.h  image_region_iterator.h  kdtree_node.h  kinect_sequence.h  label_flow_npg.h  lockable.h  node_potential_aggregator.h  node_potential_generator.h  node_potentials.h  optical_flow_node.h  organized_surface_normal_node.h  patch_classifier.h  potentials_cache.h  scene_alignment_node.h  scene_alignment_npg.h  seed_image_distance_npg.h  seed_npg.h  segmentation_pipeline.h  segmentation_visualizer.h  sequence_segmentation_solver.h  sequence_segmentation_view_controller.h  surface_normal_epg.h  surface_normal_node.h  typedefs.h
src/ros-pkg/dst/src/lib/: bilateral_npg.cpp  canny_epg.cpp  color_delta_epg.cpp  color_histogram_npg.cpp  depth_epg.cpp  depth_npg.cpp  depth_projector.cpp  edge_potential_aggregator.cpp  edge_potential_generator.cpp  helper_functions.cpp  image_processing_nodes.cpp  image_region_iterator.cpp  kdtree_node.cpp  kinect_sequence.cpp  label_flow_npg.cpp  lockable.cpp  node_potential_aggregator.cpp  node_potential_generator.cpp  optical_flow_node.cpp  organized_surface_normal_node.cpp  patch_classifier.cpp  potentials_cache.cpp  scene_alignment_node.cpp  scene_alignment_npg.cpp  seed_image_distance_npg.cpp  seed_npg.cpp  segmentation_pipeline.cpp  segmentation_visualizer.cpp  sequence_segmentation_model.cpp  sequence_segmentation_view_controller.cpp  surface_normal_epg.cpp  surface_normal_node.cpp
src/ros-pkg/dst/src/program/: image_cut.cpp  kinect_cut.cpp  kinect_cut_interactive.cpp  receive.cpp  segmentation_visualizer.cpp
src/ros-pkg/dst/src/test/: test_maxflow.cpp
src/ros-pkg/hand_classifier/: CMakeLists.txt  mainpage.dox  manifest.xml
src/ros-pkg/hand_classifier/include/hand_classifier/: hand_classifier.h
src/ros-pkg/hand_classifier/src/: evaluate.cpp  extract_mbd.cpp  hand_classifier.cpp
src/ros-pkg/image_descriptor_nodes/: CMakeLists.txt  mainpage.dox  manifest.xml
src/ros-pkg/image_descriptor_nodes/include/image_descriptor_nodes/: image_descriptor_nodes.h
src/ros-pkg/image_descriptor_nodes/src/: image_descriptor_nodes.cpp  test_image_descriptor_nodes.cpp  test_image_descriptor_nodes_speed.cpp
src/ros-pkg/image_labeler/: CMakeLists.txt  mainpage.dox  manifest.xml
src/ros-pkg/image_labeler/example_run/: annotations.txt
src/ros-pkg/image_labeler/example_run/images/: readme
src/ros-pkg/image_labeler/include/image_labeler/: image_label_manager.h  image_labeler.h  image_labeler_controller.h  oneoff_image_labeler_controller.h  opencv_view.h
src/ros-pkg/image_labeler/src/: cropped_image_viewer.cpp  dataset_viewer.cpp  dump_objects.cpp  image_label_manager.cpp  image_labeler.cpp  image_labeler_controller.cpp  label_sampler.cpp  oneoff_image_labeler_controller.cpp  opencv_view.cpp  test_image_label_manager.cpp
src/ros-pkg/multibooster/: CMakeLists.txt  manifest.xml  multibooster.cpp  multibooster_dataset.cpp  multitool.cpp  weak_classifier_tree.cpp  weak_classifier_tree_research.cpp
src/ros-pkg/multibooster/include/multibooster/: multibooster.h  synth_data.h
src/ros-pkg/multibooster/test/: speed_test.cpp  test_multibooster.cpp  test_multibooster_dataset.cpp
src/ros-pkg/name_mapping/: CMakeLists.txt  manifest.xml
src/ros-pkg/name_mapping/include/name_mapping/: name_mapping.h
src/ros-pkg/name_mapping/src/: name_mapping.cpp
src/ros-pkg/name_mapping/test/: test_name_mapping.cpp
src/ros-pkg/online_learning/: CMakeLists.txt  mainpage.dox  manifest.xml
src/ros-pkg/online_learning/include/online_learning/: cross_validator.h  online_learning.h  projection_slicer.h  schedulers.h  ssl.h  synthetic_data_generator.h  trainers.h
src/ros-pkg/online_learning/src/lib/: classification.cpp  cross_validator.cpp  dataset.cpp  dataset_slicer.cpp  dataset_splitter.cpp  evaluator.cpp  online_learning.cpp  params.cpp  projection_slicer.cpp  schedulers.cpp  ssl.cpp  synthetic_data_generator.cpp  trainers.cpp
src/ros-pkg/online_learning/src/program/: cross_validate.cpp  evaluate_supervised.cpp  orthogonality_experiment.cpp  test_serialization_methods.cpp  timing_experiment.cpp
src/ros-pkg/online_learning/src/test/: test_odontomachus.cpp  test_ssl.cpp
src/ros-pkg/segmentation_and_tracking/: CMakeLists.txt  mainpage.dox  manifest.xml
src/ros-pkg/segmentation_and_tracking/include/segmentation_and_tracking/: hand_segmenter_view_controller.h  scene.h
src/ros-pkg/segmentation_and_tracking/src/: hand_segmenter.cpp  hand_segmenter_view_controller.cpp  opencv_test.cpp  scene.cpp  segmentation.cpp  sequence.cpp  tracked_object.cpp  view_data.cpp
wiki_page/: SoftwareInstallation.html
(+4015 files in other folders)
